# Debt-Re-Aging

./: .gitignore  404.html  CITATION.cff  CLICK_HERE_TO_START.txt  CONTRIBUTING.md  CREATE_DESKTOP_SHORTCUT.bat  HANDOFF_SUMMARY.md  LICENSE  README.md  RELEASE_NOTES.md  START_APP.bat  Step1Input.tsx  Step3Verify.tsx  Step4Analysis.tsx  _config.yml  docker-compose.yml  index.html  launcher.py  package-lock.json  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  start.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: __init__.py  _legacy_importer.py  accessibility.py  analytics.py  audit.py  batch.py  case_manager.py  cfpb_complaint.py  error_handler.py  evidence_builder.py  extraction.py  generator.py  glossary.py  main.py  metrics.py  metro2.py  multi_account.py  parser.py  pdf_export.py  preprocessing.py  regulatory.py  rules.py  rules_metadata.json  settings.py  state_sol.py  utils.py
app/ui/: __init__.py  analytics.py  common.py  dashboard.py  furnisher.py  help.py  sidebar.py  steps.py
docker/: Dockerfile  docker-compose.yml
docs/: ABOUT.md  CHANGE_LOG_V4.4.md  CHANGE_LOG_V5.0.md  COMPLIANCE_CHECKLIST.md  DATA_SECURITY_POLICY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_MARKETING.md  EXECUTIVE_SUMMARY.md  FAQ.md  FEEDBACK_FORM.md  INSTITUTIONAL_ADOPTION.md  INSTITUTIONAL_HANDOFF.md  IT_DEPLOYMENT_GUIDE.md  ONE_PAGE_OVERVIEW.md  OUTREACH_TEMPLATES.md  PARTNERSHIP_PROPOSAL.md  PILOT_GUIDE.md  QUICK_REFERENCE_CARD.md  QUICK_START.md  RULES.md  SECURITY_WHITEPAPER.md  TRAINING_MATERIALS.md
img/: README.md
installer/: build_windows.bat  debt_reaging.spec
legacy/python-app/: api.py  batch.py  case_manager.py  cfpb_complaint.py  client_portal.py  constants.py  creditor_db.py  (+21 more)
myenv/: pyvenv.cfg
pwa-app/: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE.md  DEPLOY.md  README.md  c:\Debt Re-aging\pwa-app\src\components\steps\analysis\DeltasTab.tsx  c:\Debt Re-aging\pwa-app\src\components\steps\analysis\TimelineTab.tsx  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
samples/: sample_case_1.json  sample_case_10.json  sample_case_11.json  sample_case_12.json  sample_case_2.json  sample_case_3.json  sample_case_4.json  sample_case_5.json  sample_case_6.json  sample_case_7.json  sample_case_8.json  sample_case_9.json
templates/: attachments_checklist.md.j2  bureau_dispute_letter.md.j2  debt_validation_letter.md.j2  furnisher_audit_memo.md.j2  furnisher_dispute_letter.md.j2  packet_summary.md.j2  timeline_report.md.j2
tests/: __init__.py  test_accessibility.py  test_api.py  test_batch.py  test_case_manager.py  test_cfpb_complaint.py  test_deadlines.py  test_docx_export.py  test_error_handler.py  test_evidence_builder.py  test_extraction.py  test_generator.py  test_logic.py  test_metrics.py  test_metro2.py  test_parser.py  test_pdf_export.py  test_regulatory.py  test_rules.py  test_samples.py  test_settings.py  test_state_sol.py  test_utils.py  test_validation.py
(+188 files in other folders)
