[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debt-reaging-case-factory"
version = "1.0.0"
authors = [
  { name="Mukund Thiru", email="contact@example.com" },
]
description = "Timeline Inconsistency Detection + Dispute Packet Generator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Legal",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "streamlit>=1.28.0",
    "PyMuPDF>=1.23.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "Jinja2>=3.1.2",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
    "markdown>=3.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "black",
    "isort",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/contactmukundthiru-cyber/Debt-Re-Aging"
"Bug Tracker" = "https://github.com/contactmukundthiru-cyber/Debt-Re-Aging/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
