[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-report-analyzer"
version = "4.4.0"
authors = [
  { name="Mukund Thiru", email="contactmukundthiru1@gmail.com" },
]
description = "Free tool to find errors in credit reports and generate dispute letters"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Legal",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "streamlit>=1.28.0",
    "PyMuPDF>=1.23.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "Jinja2>=3.1.2",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
    "markdown>=3.5.0",
    "psutil>=5.9.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
api = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "black",
    "isort",
    "flake8",
]

[project.urls]
"Homepage" = "https://github.com/contactmukundthiru-cyber/Debt-Re-Aging"
"Bug Tracker" = "https://github.com/contactmukundthiru-cyber/Debt-Re-Aging/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
